@@ -1,3 +1,11 @@
+2007-07-23 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b95
+
+ * Fix: Use correct language domain lin lib/album.php
+
+ * Fix: Add param for album options selectbox.
+
+ * Change: Little css for navigator.
+ 
 2007-07-21 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b94
 
  * Fix: Return from login/logout was broken.
